clang/test/BSC/Negative/Method/Struct/struct_incomplete_type_call/struct_incomplete_type_call.cbs
// RUN: %clang_cc1 -verify %s

int main() {
    struct Foo::getA(); // expected-error {{variable has incomplete type 'struct Foo'}}
                        // expected-error@-1 {{use of undeclared identifier 'getA'}}
    return 0;
}
